--- a/src/main/resources/templates/create-edit.html
+++ b/src/main/resources/templates/create-edit.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<header>
+		<div th:replace="fragments/navbar-fragment :: navbar"></div>
+	</header>
 	<div class="container">
 		<h1 class="text-center" th:text="${pizza.id == null ? 'Crea' : 'Modifica'} + ' una pizza!'"></h1>
 		<form id="formPizza" th:object="${pizza}" method="post">
